--- a/ProgressKeeper/ProgressKeeper.csproj
+++ b/ProgressKeeper/ProgressKeeper.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
+  </ItemGroup>
+
 </Project>
